<resources>
    <string name="app_name">Stufeed</string>
    <string name="login">Login</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="forget_password">Forget Password</string>
    <string name="identifier">identifier</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="email">Email Id</string>
    <string name="ccContact">Contact</string>
    <string name="password">Password</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="loginAs">Login As</string>
    <string name="posts">Posts</string>
    <string name="post">Post</string>
    <string name="following">Following</string>
    <string name="proceed">PROCEED</string>
    <string name="dont_find"><u>I don\'t find it</u></string>
    <string name="enter_user_name">Enter User Name!</string>
    <string name="submit">Submit</string>
    <string name="followers">Followers</string>
    <string name="follow">Follow</string>
    <string name="join_board">Join Board</string>
    <string name="name_of_board">Name Of Board</string>
    <string name="description">Description</string>
    <string name="edit">Edit</string>
    <string name="feed">Feed</string>
    <string name="selectBoard">Select Board</string>
    <string name="you">You</string>
    <string name="board">Board</string>
    <string name="connect">Connect</string>
    <string name="enter_a_keyword">Enter Institute Name</string>
    <string name="feed_icon">&#xf09e;</string>
    <string name="you_icon">&#xf2c0;</string>
    <string name="board_icon">&#xf2c2;</string>
    <string name="connect_icon">&#xf0c0;</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading</string>
    <string name="title_activity_student_setting">Settings</string>
    <string name="notification_on_off">Notification on/off</string>
    <string name="message_on_off">Receive Private Message on/off</string>
    <string name="account_disable">Account Disable</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_condition">Terms And Condition</string>
    <string name="logout">Logout</string>
    <string name="general_information">General Information</string>
    <string name="program_degree">Program/Degree</string>
    <string name="branch">Branch</string>
    <string name="graduation_year">Graduation Year</string>
    <string name="join_year">Year Of Joining</string>
    <string name="college">College</string>
    <string name="university">University</string>
    <string name="about_status">About Status</string>
    <string name="gender">Gender</string>
    <string name="contact">Mobile</string>
    <string name="enter_email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="change_password">Change Password</string>
    <string name="security">Security</string>
    <string name="unfollow">UnFollow this person</string>
    <string name="saved_post">Saved Post</string>
    <string name="block">Block this person</string>
    <string name="hide_post">Report post/Hide post</string>
    <string name="next">Next</string>
    <string name="board_submit">Submit</string>
    <string name="save">Save</string>
    <string name="document">Document</string>
    <string name="audio">Audio</string>
    <string name="gallery">Gallery</string>
    <string name="poweredby">Powered By Sowmitras</string>
    <string name="create_board">Create Board</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="protection">Would you like to keep is protected</string>
    <string name="protection_label">If You On Permission Everyone Need Permission For Join Board</string>
    <string name="protection_label_group">If You On Protection Everyone Need Permission For Join Group</string>
    <string name="edit_board">Edit Board</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="delete_board">Delete Board</string>
    <string name="delete_group">Delete Group</string>
    <string name="archive_board">Archived Boards</string>
    <string name="archive_group">Archive group</string>
    <string name="lbl_forgot_password">Forget Password</string>
    <string name="forgot_password_msg">We Need to Your Registered Email Address To Send Your Password Reset Instructions</string>
    <string name="hint_email">Enter Email Address</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="add_posts">Add Posts</string>
    <string name="add_board">Add Board</string>
    <string name="title_activity_tango">Tango</string>
    <string name="banner_ad_unit_id">ca-app-pub-1566281878164068/4123321658</string>
    <string name="title_activity_my_profile">MyProfile</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="collegeAffilaction">Enter Institute Id Code To Complete Your Verification</string>
    <string name="nav_post">Post</string>
    <string name="group">Group</string>
    <string name="create_group">Create Group</string>
    <string name="name_of_group">Name Of Group</string>
    <string name="like">Like</string>
    <string name="comments">Comment</string>
    <string name="title_activity_spin">Spin</string>
    <string name="archive">Archive Board</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="docs">Open</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="more">More</string>
    <string name="notification">Notification</string>
    <string name="about">About</string>
    <string name="blocked">Blocked Users</string>
    <string name="people_follow">People You Follow</string>
    <string name="delete">Delete</string>
    <string name="pdf">PDF</string>
    <string name="deadLine"><b>Final Dead Lines For This Project Is <b><i><u>15-09-2017</u></i></b></b>.\n
        We would like to request you please share your all development requirement by this\n<b><i><u>11-09-2017</u></i></b> date\n
        After that we are not able to take your request for any kind of changes in application.\n
        Please share your all modules or functionality by the mentioned date.\n
        This is our final call for gathering complete requirement by the mentioned date.\n
        Please collect you all information related to app functionality and explain with us by the dates.\n
        After that any kind of new changes in app functionality will not accepted by us.\n
        So please complete your all information/functionality and share with us on the date at 9:00AM and this is final call.</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="fullname">Full Name</string>
    <string name="collegeApproval">Select College</string>
    <string name="validate">Verify</string>
    <string name="report">Report</string>
    <string name="reject">Reject</string>
    <string name="approve">Approve</string>
    <string name="accept">Accept</string>
    <string name="JoinRequest">Join Request</string>
    <string name="approveorreject">Accept or Reject requests to join</string>
    <string name="click">By Clicking On Submit You Agree To Our <b>Terms</b> And <b>Privacy Policies</b></string>
    <string name="feed_name">Enter Your Feed Name</string>
    <string name="select_role">Select Role</string>
    <string name="images">Image</string>
    <string name="optional">Optional</string>
    <string name="select_college">Select Your Institute And Skip</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="un_block">Unblock</string>
    <string name="verify_email_address_text"><b><h4>Hello Friend!</h4></b>\n\nNow you can check your\n <b>"Email Box"</b> for we have sent to you a verification link and click to verify <b>Stufeed</b> account </string>
    <string name="hide_search">Hide My Account From Search</string>
    <string name="search">Search</string>
    <string name="reply">Reply</string>
    <string name="regiter_college_info">Are You An Institution</string>
    <string name="comment_txt_value">Add Your Comment</string>
    <string name="register_institute">Register Your Institution</string>
    <string name="institute_detail">You are now just one step away enter your institution details to register</string>
    <string name="institute_name">Institution Name</string>
    <string name="institute_type">Institution Type</string>
    <string name="coaching">Coaching</string>
    <string name="school">School</string>
    <string name="select_university">Select Your University</string>
    <string name="address">Institute Address</string>
    <string name="inst_number">Institute Id Number</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="website">Website(Optional)</string>
    <string name="specialist">Specialisted In(Optional)</string>
    <string name="year_of_stablished">Year Of Established(Optional)</string>
    <string name="managed_by">Institute Managed By</string>
    <string name="error_university">Select University</string>
    <string name="error_institue_address">Enter Institute Address</string>
    <string name="error_city">Select City</string>
    <string name="error_state">Select State</string>
    <string name="error_institute_id_no">Enter Institute Id Number</string>
    <string name="error_institute_name">Enter Institution Name</string>
    <string name="error_email">Enter Email Address</string>
    <string name="error_pass">Enter Password</string>
    <string name="error_mobile">Enter Mobile Number</string>
</resources>