<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@color/common_color">

    <TextView
        android:id="@+id/commonTitle"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:gravity="center"
        android:text="@string/edit_board"
        android:textStyle="bold"
        android:textSize="@dimen/dimen_25dp"
        android:textColor="@color/text_color"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:background="@color/text_color"/>

    <EditText
        android:id="@+id/edit_nameOfBoardEdit"
        android:layout_width="match_parent"
        android:textSize="15sp"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/darker_gray"
        android:layout_weight="0.13"
        android:hint="@string/name_of_board"
        android:padding="@dimen/dimen_5dp"
        android:singleLine="true"
        android:textColor="@color/colorAccent" />

    <EditText
        android:id="@+id/edit_board_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:gravity="top"
        android:maxLength="75"
        android:maxLines="2"
        android:textSize="15sp"
        android:textColorHint="@android:color/darker_gray"
        android:hint="@string/description"
        android:padding="@dimen/dimen_5dp"
        android:textColor="@color/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="@dimen/dimen_5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center|left"
            android:padding="@dimen/dimen_5dp"
            android:text="@string/protection"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/dimen_20dp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/swtUpdate"
            android:layout_width="@dimen/dimen_0dp"
            android:theme="@style/SwitchButtonColor"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:paddingRight="@dimen/dimen_10dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView10"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03"
        android:gravity="top|center"
        android:padding="@dimen/dimen_16dp"
        android:text="@string/protection_label"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/dimen_16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_margin="@dimen/dimen_10dp">

        <Button
            android:id="@+id/archive_board"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:layout_margin="@dimen/dimen_5dp"
            android:background="@drawable/dlt_arch_border"
            android:text="@string/archive_board"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/button_color"
            android:textStyle="bold" />

        <View
            android:id="@+id/viewBDA"
            android:layout_width="@dimen/dimen_0dp"
            android:visibility="gone"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/delete_board"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:layout_margin="@dimen/dimen_5dp"
            android:gravity="center"
            android:background="@drawable/dlt_arch_border"
            android:text="@string/delete_board"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/button_color"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:background="@android:color/black"
        android:layout_height="1dp"/>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_margin="@dimen/dimen_16dp">

        <Button
            android:id="@+id/edit_cancel"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"

            android:backgroundTint="@color/button_color"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/edit_done"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:backgroundTint="@color/button_color"
            android:text="@string/done"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:visibility="visible" />
    </LinearLayout>
</LinearLayout>