<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="410dp"
    android:gravity="center"
    android:background="@color/common_color"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_launcher_web"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:textStyle="bold"
        android:textColor="@color/text_color"
        android:text="@string/lbl_forgot_password"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:padding="@dimen/activity_horizontal_margin"
        android:textColor="@color/text_color"
        android:text="@string/forgot_password_msg"
        android:textSize="14dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingTop="@dimen/dimen_10dp"
            android:textColor="@color/text_color"
            android:textSize="@dimen/dimen_16dp"
            android:paddingRight="@dimen/dimen_10dp"
            android:layout_gravity="bottom"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/text_hint_color" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:textStyle="bold"
        android:textSize="@dimen/dimen_16dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/btn_reset_password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:visibility="gone"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/white"
        android:text="@string/btn_back"/>

</LinearLayout>